--- a/ask/qa/templates/qa/main.html
+++ b/ask/qa/templates/qa/main.html
@@ -2,12 +2,12 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <nav><ul class="pagination">
 {% for p in paginator.page_range %}
-    {% if p.number == page.number %}
+    {% if p == page.number %}
     <li class="page-item active">
     {% else %}
     <li class="page-item">
     {% endif %}
-        <a class="page-link" href="{{paginator.baseurl}}{{p.number}}">{{p.number}}</a>
+        <a class="page-link" href="{{paginator.baseurl}}{{p.number}}">{{p}}</a>
     </li>
 {% endfor %}
 </ul></nav>
