--- a/ask/qa/templates/qa/main.html
+++ b/ask/qa/templates/qa/main.html
@@ -7,7 +7,7 @@
     {% else %}
     <li class="page-item">
     {% endif %}
-        <a class="page-link" href="{{paginator.baseurl}}{{p.number}}">{{p}}</a>
+        <a class="page-link" href="{{paginator.baseurl}}{{p}}">{{p}}</a>
     </li>
 {% endfor %}
 </ul></nav>
