--- a/ask/qa/templates/qa/main.html
+++ b/ask/qa/templates/qa/main.html
@@ -2,7 +2,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 {% for i in questions %}
-<h5>{{i}}</h5>
+<h5>{{i.title}} - <a href="/question/{{i.id}}">QUESTION № {{i.id}}</a></h5>
 {% endfor %}
 
 <nav><ul class="pagination">
