--- a/ask/qa/templates/qa/ask_add.html
+++ b/ask/qa/templates/qa/ask_add.html
@@ -15,6 +15,6 @@
         {% endfor %}
     </fieldset>
 <div class="form-actions">
-    <button type="submit" class="btn btn-primary"> SAVE </button>
+    <button type="submit" class="btn btn-primary"> SUBMIT </button>
 </div>
 </form>
