--- a/ask/qa/templates/qa/question.html
+++ b/ask/qa/templates/qa/question.html
@@ -24,6 +24,6 @@
         {% endfor %}
     </fieldset>
 <div class="form-actions">
-    <button type="submit" class="btn btn-primary"> SAVE </button>
+    <button type="submit" class="btn btn-primary"> SUBMIT </button>
 </div>
 </form>
