--- a/ask/qa/templates/qa/signup.html
+++ b/ask/qa/templates/qa/signup.html
@@ -2,7 +2,15 @@
 <h2>Registration</h2>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p}}
+    {% for field in form %}
+    <p>
+        {{ field.label_tag }}<br>
+        {{ field }}
+        {% for error in field.errors %}
+            <p>{{ error }}</p>
+        {% endfor %}
+    </p>
+    {% endfor %}
     <button type="submit">Отправить</button>
 </form>
 {% endblock %}
