--- a/ask/qa/templates/qa/login.html
+++ b/ask/qa/templates/qa/login.html
@@ -1,14 +1,7 @@
 <h2>Login</h2>
 <form method="post">
     {% csrf_token %}
-    {% for field in form %}
-    <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% for error in field.errors %}
-            <p>{{ error }}</p>
-        {% endfor %}
-    </p>
-    {% endfor %}
+    {{ form.as_p }}
     <button type="submit">Log-in</button>
 </form>
+<h3>{{ error }}</h3>
